--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -5,3 +5,11 @@ nest_secret: xxxxxxxxxxxxxxxxx
 ifttt: xxxxxxxxxxxxxxxxxxxxxxxxxx
 pushover_api_key: xxxxxxxxxxxxxxxxxxxxxxx
 pushover_user_key: xxxxxxxxxxxxxxxxxxxxxx
+latitude: 00.0000
+longitude: 00.00000
+elevation: 00
+base_url: xxxxxxxxxxx
+telegram_key: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+telegram_chat: 0000000
+ssl_cert: xxxxxxxxxxxxxxxx
+ssl_key: xxxxxxxxxxxxxxxxxxxxx
