fix travis config

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -11,5 +11,5 @@ elevation: 00
 base_url: xxxxxxxxxxx
 telegram_key: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 telegram_chat: 0000000
-ssl_cert: xxxxxxxxxxxxxxxx
-ssl_key: xxxxxxxxxxxxxxxxxxxxx
+ssl_cert: ssl_cert.pem
+ssl_key: ssl_key.pem
