--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ before_install:
   - mv travis_secrets.yaml secrets.yaml
 install:
   - pip3 install homeassistant
+  - "bash $TRAVIS_BUILD_DIR/bin/dummy_secrets.sh"
 script:
   - hass -c . --script check_config
