--- a/configuration.yaml
+++ b/configuration.yaml
@@ -127,5 +127,4 @@ script: !include_dir_merge_named scripts
 scene: !include scenes.yaml
 automation: !include_dir_merge_list automation
 
-shell_command:
-  get_latest_config: bash /home/homeassistant/.homeassistant/bin/update_config_from_github.sh
+shell_command: !include_dir_named shell_command/
