--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -13,3 +13,7 @@ telegram_key: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 telegram_chat: 0000000
 ssl_cert: ssl_cert.pem
 ssl_key: ssl_key.pem
+utorrent_host: xxxxxxxxx
+utorrent_port: 7070
+utorrent_user: xxxxxxxxxxxxxx
+utorrent_password: xxxxxxxxxxxxxxx
