Added hive config

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -118,6 +118,9 @@ history:
       - sensor
       - switch
       - light
+hive:
+  username: laura.redshaw@gmail.com
+  password: 1372583697
 
 zone: !include zones.yaml
 sensor: !include sensors.yaml
