--- a/configuration.yaml
+++ b/configuration.yaml
@@ -131,3 +131,39 @@ scene: !include scenes.yaml
 automation: !include_dir_merge_list automation
 
 shell_command: !include_dir_named shell_command/
+
+alexa:
+  intents:
+    WhereAreWeIntent:
+      speech:
+        type: plaintext
+        text: >
+          {%- if is_state('device_tracker.scottphone', 'home') and
+                 is_state('device_tracker.lauraphone', 'home') -%}
+            You are both home, you silly
+          {%- else -%}
+            Scott is at {{ states("device_tracker.scottphone") }}
+            and Laura is at {{ states("device_tracker.lauraphone") }}
+          {% endif %}
+
+    LocateIntent:
+      action:
+        service: notify.notify
+        data_template:
+          message: The location of {{ User }} has been queried via Alexa.
+      speech:
+        type: plaintext
+        text: >
+          {%- for state in states.device_tracker -%}
+            {%- if state.name.lower() == User.lower() -%}
+              {{ state.name }} is at {{ state.state }}
+            {%- elif loop.last -%}
+              I am sorry, I do not know where {{ User }} is.
+            {%- endif -%}
+          {%- else -%}
+            Sorry, I don't have any trackers registered.
+          {%- endfor -%}
+      card:
+        type: simple
+        title: Query Location
+        content: The location of {{ User }} has been queried.
