--- a/configuration.yaml
+++ b/configuration.yaml
@@ -148,7 +148,7 @@ alexa:
 
     LocateIntent:
       action:
-        service: notify.notify
+        service: notify.global
         data_template:
           message: The location of {{ User }} has been queried via Alexa.
       speech:
