--- a/configuration.yaml
+++ b/configuration.yaml
@@ -140,7 +140,7 @@ alexa:
         text: >
           {%- if is_state('device_tracker.scottphone', 'home') and
                  is_state('device_tracker.lauraphone', 'home') -%}
-            You are both home, you silly
+            You are both at home
           {%- else -%}
             Scott is at {{ states("device_tracker.scottphone") }}
             and Laura is at {{ states("device_tracker.lauraphone") }}
@@ -154,10 +154,12 @@ alexa:
       speech:
         type: plaintext
         text: >
+          {% set found = false %}
           {%- for state in states.device_tracker -%}
             {%- if state.name.lower() == User.lower() -%}
               {{ state.name }} is at {{ state.state }}
-            {%- elif loop.last -%}
+              {% set found = false %}
+            {%- elif loop.last and not found -%}
               I am sorry, I do not know where {{ User }} is.
             {%- endif -%}
           {%- else -%}
@@ -167,3 +169,27 @@ alexa:
         type: simple
         title: Query Location
         content: The location of {{ User }} has been queried.
+    LightOnIntent:
+      action:
+        service: light.turn_on
+        data_template:
+          entity_id: light.{{ Light | replace(" ", "_") }}
+      speech:
+        type: plaintext
+        text: !include alexa_confirm.yaml
+      card:
+        type: simple
+        title: Light turned on
+        content: The {{ Light }} was turned on
+    LightOffIntent:
+      action:
+        service: light.turn_off
+        data_template:
+          entity_id: light.{{ Light | replace(" ", "_") }}
+      speech:
+        type: plaintext
+        text: !include alexa_confirm.yaml
+      card:
+        type: simple
+        title: Light turned off
+        content: The {{ Light }} was turned off
