--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 tts/
 deps/
 secrets.yaml
-nest.conf
 emulated_hue_ids.json
-phue.conf
+*.conf
 home-assistant.log
 .uuid
 .HA_VERSION
 known_devices.yaml
+*.pyc
