--- a/sensors.yaml
+++ b/sensors.yaml
@@ -61,6 +61,7 @@
               {{ states.sensor.battery_scott.state }}
           {%- endif %}
 
-- platform: command_line
-  name: commits_behind
-  command: ./home/homeassistant/.homeassistant/bin/commits_behind.sh
+sensor:
+  - platform: fitbit
+    monitored_resources:
+      - "body/weight"
